[project]
name = "tumblr-backup-wrapper"
version = "0.2.0"
description = "Back up a list of tumblr blogs (for use in automated backups)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "requests-oauth2client>=1.8.0",
    "tumblr-backup[dash,jq,video]>=1.6.5",
]
